dark mode bugs fixed

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -19,7 +19,7 @@
 }
 
 .navbar-section{
-    background-color: inherit;
+    background-color: initial;
 }
 
 .navbar-section-item{
