--- a/src/components/recentfeed.css
+++ b/src/components/recentfeed.css
@@ -1,3 +1,4 @@
 .recent-feed-title.dark{
     color: var(--white);
+    background-color: initial;
 }
